Faceted Search: * Modify faceted-search clear filter to be able to remember category id if it exists. * 26316: Hide show the category image and description when one or more facet selected * Css formatting & bemize product-tiles * Hide footer when mobile filters are shown * Added ContentMgr to centralize the state of footer/header display * updated header/footer controllers and views to watch the ContentMgr state * updated theme-settings: use ContentMgr hide/show header/footer as part of its lifecycle * Disable touch activation for snap-js menu. * prototype hide/show of snap menu for mobile facets visible case * fix style for mobile facet togle control

--- a/app/styles/components/th/_category.scss
+++ b/app/styles/components/th/_category.scss
@@ -1,61 +1,61 @@
 @import '../media';
 
-.-faceted-search {
+.vn-facet-search-control {
+	border-bottom : 1px solid $gray-dark;
+}
+
+.vn-faceted-search {
 	// resets
-	padding: 0;
-	margin: 0;
+	padding       : 0;
+	margin        : 0;
 
 	label {
-		display: block;
+		display : block;
 	}
 
 	div {
-		padding: 0;
-		margin: 0;
+		padding : 0;
+		margin  : 0;
 	}
 
 	input {
-		width: 50px;
+		width : 50px;
 	}
 
 	.name {
-		display: inline-block;
+		display : inline-block;
 	}
 
 	.count {
-		margin-left: 2px;
-		padding-left: 5px;
-		padding-right: 5px;
-		float: right;
-		background-color: #999;
-		color: white;
-		display: block;
-		border-radius: 2px;
+		margin-left      : 2px;
+		padding-left     : 5px;
+		padding-right    : 5px;
+		float            : right;
+		background-color : #999;
+		color            : white;
+		display          : block;
+		border-radius    : 2px;
+	}
+
+	@media(max-width : 767px) {
+
+		&.isMobileAndVisible {
+			position         : relative;
+			left             : 0;
+			right            : 0;
+			top              : 0;
+			bottom           : 0;
+			z-index          : 1001;
+			background-color : #fff;
+		}
 	}
 }
 
-// Default Toolbox Responsive Optimizations
-@media(max-width:767px){
-	.-faceted-search {
-		margin-top: 30px;
-		border-bottom: 1px solid;
-
-		&.isMobileAndVisible {
-			padding: 4px;
-			position: relative;
-			left: 0;
-			right: 0;
-			top: 0;
-			bottom: 0;
-			z-index: 1001;
-			background-color: #fff;
-		}
-	}
-
-	.-category-product-tiles {
-		&.isMobileAndHidden {
-			display: none;
-		}
+.vn-category-product-tiles {
+	// Note: This is also a variable name in the controller
+	// Not sure how to make that work with bem syntax though.
+	&.isMobileAndHidden {
+		display : none;
 	}
 }
 
@@ -67,34 +67,34 @@ Animation for products as facets of search are applied. [rough draft]
 */
 .-product-tile-animation.ng-enter,
 .-product-tile-animation.ng-leave {
-    -webkit-transition: 100ms ease-out all;
-    transition: 100ms ease-out all;
+	-webkit-transition : 100ms ease-out all;
+	transition         : 100ms ease-out all;
 }
 
 /* ending enter and move styling
    (this is what the element will animate from */
 .-product-tile-animation.ng-enter {
-	opacity: 0;
+	opacity : 0;
 }
 
 /* ending enter and move styling
    (this is what the element will animate towards */
 .-product-tile-animation.ng-enter.ng-enter-active {
-	opacity: 1;
+	opacity : 1;
 }
 
 /* starting leave animation */
 .-product-tile-animation.ng-leave {
-	opacity: 1;
+	opacity : 1;
 }
 
 /* ending leave animation */
 .-product-tile-animation.ng-leave.ng-leave-active {
-	opacity: 0;
+	opacity : 0;
 }
+
 // End animation for products as facets of search are applied. [rough draft]
 
-
 .categories {
-	min-height: 400px;
+	min-height : 400px;
 }
