--- a/app/styles/components/th/_faceted-search.scss
+++ b/app/styles/components/th/_faceted-search.scss
@@ -1,6 +1,5 @@
 .vn-faceted-search-header {
 	text-align    : center;
-	border-bottom : 1px solid;
 
 	.__cancel-action, .__clear-action {
 		width   : 96%;
